roomKeyをchannelKeyに変更
