# domain/model/chat.go
@@ -7,14 +7,14 @@ import (
 type Chats []Chat
 
 type Chat struct {
-	ID        int64     `json:"id"`
-	ChatKey   string    `json:"chat_key"`
-	RoomKey   string    `json:"room_key"`
-	UserKey   string    `json:"user_key"`
-	UserName  string    `json:"user_name"`
- 	Content   string    `json:"content"`
-	CreatedAt time.Time `json:"created_at" gorm:"autoCreateTime"`
-    UpdatedAt time.Time `json:"updated_at" gorm:"autoUpdateTime"`
+	ID         int64     `json:"id"`
+	ChatKey    string    `json:"chat_key"`
+	ChannelKey string    `json:"channel_key"`
+	UserKey    string    `json:"user_key"`
+	UserName   string    `json:"user_name"`
+ 	Content    string    `json:"content"`
+	CreatedAt  time.Time `json:"created_at" gorm:"autoCreateTime"`
+    UpdatedAt  time.Time `json:"updated_at" gorm:"autoUpdateTime"`
 }
 
 func EmptyChat() *Chat {
@@ -25,7 +25,7 @@ func (chat *Chat) IsEmpty() bool {
 	return (
 		chat.ID == 0 &&
 		chat.ChatKey == "" &&
-		chat.RoomKey == "" &&
+		chat.ChannelKey == "" &&
 		chat.UserKey == "" &&
 		chat.UserName == "" &&
 		chat.Content == "")
