# swagger/swagger.json
@@ -403,7 +403,7 @@
                 }
             }
         },
-        "/chat/{userKey}/chat_create/{roomKey}": {
+        "/chat/{userKey}/chat_create/{channelKey}": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -455,7 +455,7 @@
                 }
             }
         },
-        "/chat/{userKey}/chat_list/{roomKey}": {
+        "/chat/{userKey}/chat_list/{channelKey}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -702,6 +702,9 @@
         "output.ChatCreate": {
             "type": "object",
             "properties": {
+                "channel_key": {
+                    "type": "string"
+                },
                 "chat_key": {
                     "type": "string"
                 },
@@ -709,9 +712,6 @@
                     "type": "string"
                 },
                 "message": {
-                    "type": "string"
-                },
-                "room_key": {
                     "type": "string"
                 },
                 "user_key": {
